--- a/Bulky/BulkyWeb/appsettings.json
+++ b/Bulky/BulkyWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=KELT99851Z2\\SQLEXPRESS; Trusted_Connection=True; TrustServerCertificate=True;"
+  }
 }
