--- a/Bulky/BulkyWeb/appsettings.json
+++ b/Bulky/BulkyWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KELT99851Z2\\SQLEXPRESS; Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=KELT99851Z2\\SQLEXPRESS; Database=Bulky; Trusted_Connection=True; TrustServerCertificate=True;"
   }
 }
