--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ Bulky/BulkyWeb/bin
 Bulky/BulkyWeb/obj
 Bulky/BulkyWebRazor_Temp/bin
 Bulky/BulkyWebRazor_Temp/obj
+Bulky/Bulky.DataAccess/bin
+Bulky/Bulky.DataAccess/obj
+Bulky/Bulky.Models/bin
+Bulky/Bulky.Models/obj
+Bulky/Bulky.Utility/bin
+Bulky/Bulky.Utility/obj
