--- a/Bulky/BulkyWebRazor_Temp/appsettings.json
+++ b/Bulky/BulkyWebRazor_Temp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=KELT99851Z2\\SQLEXPRESS; Database=BulkyRazor; Trusted_Connection=True; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=KELT99851Z2\\SQLEXPRESS; Database=BulkyBookRazor; Trusted_Connection=True; TrustServerCertificate=True;"
   }
 }
