--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Bulky/Bulky.Models/bin
 Bulky/Bulky.Models/obj
 Bulky/Bulky.Utility/bin
 Bulky/Bulky.Utility/obj
+
+Bulky/BulkyWeb/Areas/Admin/Views/Product/Create-old-6_90.cshtml
+Bulky/BulkyWeb/Areas/Admin/Views/Product/Create-old-6_92.cshtml
+Bulky/BulkyWeb/Areas/Admin/Views/Product/Edit-old-6_92.cshtml
