--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 Resources
 Bulky/Bulky/.vs/Bulky/v17
+Bulky/Bulky/.vs/Bulky/DesignTimeBuild
 Bulky/Bulky/.vs/ProjectEvaluation
 # Bulky/BulkyWeb/bin
 # Bulky/BulkyWeb/obj
