--- a/Bulky/Bulky/Bulky.Models/BulkyBook.Models.csproj
+++ b/Bulky/Bulky/Bulky.Models/BulkyBook.Models.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.24" />
   </ItemGroup>
 
 </Project>
